# sg_differentiation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml
include/: sg_filter.h
src/: sg_filter.cpp
test/: 5_51_matrix.txt  multidim_test.cpp  sg_differentiation-test  test_data_1_outp.txt  test_data_1_outp_d.txt  test_data_2_inp.txt  test_data_2_outp.txt  test_data_2_outp_dd.txt  test_data_3_outp_d.txt  test_sg_differentiation.cpp
test/data/: test_data_1_outp_dd.txt  test_data_2_outp_d.txt  test_data_3_inp.txt  test_data_3_outp.txt  test_data_3_outp_dd.txt
